<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hatlar"
            android:icon="@drawable/hatlar_icon"
            android:title="@string/hatlar" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_my_list_group"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/toparlar"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/toparlar" />
        <item
            android:id="@+id/bloklananlar"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/bloklananlar" />
        <item
            android:id="@+id/degree_block"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/degree1" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/image21"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
